--- a/apartments.html
+++ b/apartments.html
@@ -45,8 +45,8 @@
                             <a href="price.html" class="menu-list__link">Price list</a>
                             <a href="massages.html" class="menu-list__link">Massages</a>
                             <a href="contact.html" class="menu-list__link">Contact</a>
-                            <a href="#" class="menu-list__link">Tantra team</a>
-                            <a href="#" class="menu-list__link">Gallery</a>
+                            <a href="team.html" class="menu-list__link">Tantra team</a>
+                            <a href="galary.html" class="menu-list__link">Gallery</a>
                         </nav>
                     </div>
                     <div class="menu-social">
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="header-logo">
-                <a href="">
+                <a href="index.html">
                     <img src="img/logo.png" alt="" class="header-logo__img d-none d-md-block">
                     <img src="img/logo-mobile.png" alt="" class="header-logo__img d-block d-md-none">
                 </a>
@@ -68,8 +68,8 @@
                     <a href="price.html" class="header-menu__link">Price list</a>
                     <a href="massages.html" class="header-menu__link">Massages</a>
                     <a href="contact.html" class="header-menu__link">Contact</a>
-                    <a href="#" class="header-menu__link">Tantra team</a>
-                    <a href="#" class="header-menu__link">Gallery</a>
+                    <a href="team.html" class="header-menu__link">Tantra team</a>
+                    <a href="galary.html" class="header-menu__link">Gallery</a>
                 </nav>
             </div>
 
@@ -86,7 +86,7 @@
                     <a href="">0948 158 888</a>
                 </div>
                 <div class="header-phone__callback">
-                    <a href="">Request a call</a>
+                    <a href="" data-popup>Request a call</a>
                 </div>
             </div>
 
