--- a/team.html
+++ b/team.html
@@ -26,19 +26,47 @@
 <div class="header">
     <div class="header-container">
         <div class="header-row">
-
+            <div class="header-menu header-menu-mob d-block d-lg-none">
+                <div class="header-menu__btn">
+                    <a href="">
+                        <img src="img/header-menu.svg" alt="">
+                    </a>
+                </div>
+                <div class="header-menu___content">
+                    <div class="menu-back">
+                        <a href=""><img src="img/header-menu-close.svg" alt=""></a>
+                    </div>
+                    <div class="menu-list">
+                        <nav>
+                            <a href="index.html" class="menu-list__link">Home</a>
+                            <a href="price.html" class="menu-list__link">Price list</a>
+                            <a href="massages.html" class="menu-list__link">Massages</a>
+                            <a href="contact.html" class="menu-list__link">Contact</a>
+                            <a href="team.html" class="menu-list__link">Tantra team</a>
+                            <a href="galary.html" class="menu-list__link">Gallery</a>
+                        </nav>
+                    </div>
+                    <div class="menu-social">
+                        <a href="" class="social-link"><img src="img/instagram-white.svg" alt=""></a>
+                        <a href="" class="social-link"><img src="img/facebook-white.svg" alt=""></a>
+                    </div>
+                </div>
+            </div>
             <div class="header-logo">
-                <a href=""><img src="img/logo.png" alt="" class="header-logo__img"></a>
+                <a href="index.html">
+                    <img src="img/logo.png" alt="" class="header-logo__img d-none d-md-block">
+                    <img src="img/logo-mobile.png" alt="" class="header-logo__img d-block d-md-none">
+                </a>
             </div>
 
-            <div class="header-menu">
+            <div class="header-menu header-menu_desktop">
                 <nav>
                     <a href="index.html" class="header-menu__link">Home</a>
                     <a href="price.html" class="header-menu__link">Price list</a>
                     <a href="massages.html" class="header-menu__link">Massages</a>
                     <a href="contact.html" class="header-menu__link">Contact</a>
-                    <a href="#" class="header-menu__link">Tantra team</a>
-                    <a href="#" class="header-menu__link">Gallery</a>
+                    <a href="team.html" class="header-menu__link">Tantra team</a>
+                    <a href="galary.html" class="header-menu__link">Gallery</a>
                 </nav>
             </div>
 
@@ -55,7 +83,7 @@
                     <a href="">0948 158 888</a>
                 </div>
                 <div class="header-phone__callback">
-                    <a href="">Request a call</a>
+                    <a href="" data-popup>Request a call</a>
                 </div>
             </div>
 
