--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     </div>
 </div>
 
-    <div class="main-video video-hero jquery-background-video-wrapper">
-        <video class="jquery-background-video" autoplay muted loop >
+    <div class="main-video video-hero jquery-background-video-wrapper" >
+        <video class="jquery-background-video" autoplay muted loop poster="img/slider.png">
             <source src="video/videoplayback.mp4" type="video/mp4">
             <source src="video/videoplayback.webm" type="video/webm">
             <source src="video/videoplayback.ogv" type="video/ogg">
