--- a/massages.html
+++ b/massages.html
@@ -114,7 +114,7 @@
                 <div class="col-xl-4">
                     <div class="massage-cart">
                         <div class="cart-img">
-                            <a href=""><img src="img/massage-img.png" alt=""></a>
+                            <a href="text.html"><img src="img/massage-img.png" alt=""></a>
                         </div>
                         <div class="cart-title">
                             <p>Mutual massage</p>
@@ -123,7 +123,7 @@
                             <p>Let yourself be carried away by your feelings. In a mutual massage, the tantra masseuse will guide you through the paradise in the true sense of the word. It is a massage full of touches, in which you relax completely, during which the masseuse invites you to massage her hot, oiled body, ready and fully devoted to you.</p>
                         </div>
                         <div class="cart-more">
-                            <a href="">
+                            <a href="text.html">
                                 <button>More</button>
                             </a>
                         </div>
@@ -132,7 +132,7 @@
                 <div class="col-xl-4">
                     <div class="massage-cart">
                         <div class="cart-img">
-                            <a href=""><img src="img/massage-img.png" alt=""></a>
+                            <a href="text.html"><img src="img/massage-img.png" alt=""></a>
                         </div>
                         <div class="cart-title">
                             <p>Mutual massage</p>
@@ -141,7 +141,7 @@
                             <p>Let yourself be carried away by your feelings. In a mutual massage, the tantra masseuse will guide you through the paradise in the true sense of the word. It is a massage full of touches, in which you relax completely, during which the masseuse invites you to massage her hot, oiled body, ready and fully devoted to you.</p>
                         </div>
                         <div class="cart-more">
-                            <a href="">
+                            <a href="text.html">
                                 <button>More</button>
                             </a>
                         </div>
@@ -150,7 +150,7 @@
                 <div class="col-xl-4">
                     <div class="massage-cart">
                         <div class="cart-img">
-                            <a href=""><img src="img/massage-img.png" alt=""></a>
+                            <a href="text.html"><img src="img/massage-img.png" alt=""></a>
                         </div>
                         <div class="cart-title">
                             <p>Mutual massage</p>
@@ -159,7 +159,7 @@
                             <p>Let yourself be carried away by your feelings. In a mutual massage, the tantra masseuse will guide you through the paradise in the true sense of the word. It is a massage full of touches, in which you relax completely, during which the masseuse invites you to massage her hot, oiled body, ready and fully devoted to you.</p>
                         </div>
                         <div class="cart-more">
-                            <a href="">
+                            <a href="text.html">
                                 <button>More</button>
                             </a>
                         </div>
@@ -168,7 +168,7 @@
                 <div class="col-xl-4">
                     <div class="massage-cart">
                         <div class="cart-img">
-                            <a href=""><img src="img/massage-img.png" alt=""></a>
+                            <a href="text.html"><img src="img/massage-img.png" alt=""></a>
                         </div>
                         <div class="cart-title">
                             <p>Mutual massage</p>
@@ -177,7 +177,7 @@
                             <p>Let yourself be carried away by your feelings. In a mutual massage, the tantra masseuse will guide you through the paradise in the true sense of the word. It is a massage full of touches, in which you relax completely, during which the masseuse invites you to massage her hot, oiled body, ready and fully devoted to you.</p>
                         </div>
                         <div class="cart-more">
-                            <a href="">
+                            <a href="text.html">
                                 <button>More</button>
                             </a>
                         </div>
@@ -186,7 +186,7 @@
                 <div class="col-xl-4">
                     <div class="massage-cart">
                         <div class="cart-img">
-                            <a href=""><img src="img/massage-img.png" alt=""></a>
+                            <a href="text.html"><img src="img/massage-img.png" alt=""></a>
                         </div>
                         <div class="cart-title">
                             <p>Mutual massage</p>
@@ -195,7 +195,7 @@
                             <p>Let yourself be carried away by your feelings. In a mutual massage, the tantra masseuse will guide you through the paradise in the true sense of the word. It is a massage full of touches, in which you relax completely, during which the masseuse invites you to massage her hot, oiled body, ready and fully devoted to you.</p>
                         </div>
                         <div class="cart-more">
-                            <a href="">
+                            <a href="text.html">
                                 <button>More</button>
                             </a>
                         </div>
@@ -204,7 +204,7 @@
                 <div class="col-xl-4">
                     <div class="massage-cart">
                         <div class="cart-img">
-                            <a href=""><img src="img/massage-img.png" alt=""></a>
+                            <a href="text.html"><img src="img/massage-img.png" alt=""></a>
                         </div>
                         <div class="cart-title">
                             <p>Mutual massage</p>
@@ -213,7 +213,43 @@
                             <p>Let yourself be carried away by your feelings. In a mutual massage, the tantra masseuse will guide you through the paradise in the true sense of the word. It is a massage full of touches, in which you relax completely, during which the masseuse invites you to massage her hot, oiled body, ready and fully devoted to you.</p>
                         </div>
                         <div class="cart-more">
-                            <a href="">
+                            <a href="text.html">
+                                <button>More</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="massage-cart">
+                        <div class="cart-img">
+                            <a href="text.html"><img src="img/massage-img.png" alt=""></a>
+                        </div>
+                        <div class="cart-title">
+                            <p>Mutual massage</p>
+                        </div>
+                        <div class="cart-desc">
+                            <p>Let yourself be carried away by your feelings. In a mutual massage, the tantra masseuse will guide you through the paradise in the true sense of the word. It is a massage full of touches, in which you relax completely, during which the masseuse invites you to massage her hot, oiled body, ready and fully devoted to you.</p>
+                        </div>
+                        <div class="cart-more">
+                            <a href="text.html">
+                                <button>More</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="massage-cart">
+                        <div class="cart-img">
+                            <a href="text.html"><img src="img/massage-img.png" alt=""></a>
+                        </div>
+                        <div class="cart-title">
+                            <p>Mutual massage</p>
+                        </div>
+                        <div class="cart-desc">
+                            <p>Let yourself be carried away by your feelings. In a mutual massage, the tantra masseuse will guide you through the paradise in the true sense of the word. It is a massage full of touches, in which you relax completely, during which the masseuse invites you to massage her hot, oiled body, ready and fully devoted to you.</p>
+                        </div>
+                        <div class="cart-more">
+                            <a href="text.html">
                                 <button>More</button>
                             </a>
                         </div>
